# pybullet-mcp-server

./: .gitignore  CHANGELOG_v1.1.0.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml
src/: __init__.py  collision_detection.py  constraint_manager.py  object_manager.py  persistence.py  server.py  simulation_context.py  simulation_manager.py
tests/: __init__.py
tests/integration/: __init__.py
tests/property/: __init__.py  test_simulation_properties.py
tests/unit/: __init__.py  test_collision_detection.py  test_constraint_manager.py  test_persistence.py  test_simulation_context.py  test_simulation_manager.py  test_stepping.py
